// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiQuickSelect is rendered 1`] = `
<fieldset>
  <OuiI18n
    default="Quick select a time range"
    token="ouiQuickSelect.legendText"
  >
    <Component />
  </OuiI18n>
  <OuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="spaceBetween"
    responsive={false}
  >
    <OuiFlexItem
      grow={false}
    >
      <OuiI18n
        default="Quick select"
        token="ouiQuickSelect.quickSelectTitle"
      >
        <Component />
      </OuiI18n>
    </OuiFlexItem>
    <OuiFlexItem
      grow={false}
    >
      <OuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <OuiFlexItem
          grow={false}
        >
          <OuiI18n
            default="Previous time window"
            token="ouiQuickSelect.previousLabel"
          >
            <Component />
          </OuiI18n>
        </OuiFlexItem>
        <OuiFlexItem
          grow={false}
        >
          <OuiI18n
            default="Next time window"
            token="ouiQuickSelect.nextLabel"
          >
            <Component />
          </OuiI18n>
        </OuiFlexItem>
      </OuiFlexGroup>
    </OuiFlexItem>
  </OuiFlexGroup>
  <OuiSpacer
    size="s"
  />
  <OuiFlexGroup
    gutterSize="s"
    responsive={false}
  >
    <OuiFlexItem>
      <OuiI18n
        default="Time tense"
        token="ouiQuickSelect.tenseLabel"
      >
        <Component />
      </OuiI18n>
    </OuiFlexItem>
    <OuiFlexItem>
      <OuiI18n
        default="Time value"
        token="ouiQuickSelect.valueLabel"
      >
        <Component />
      </OuiI18n>
    </OuiFlexItem>
    <OuiFlexItem>
      <OuiI18n
        default="Time unit"
        token="ouiQuickSelect.unitLabel"
      >
        <Component />
      </OuiI18n>
    </OuiFlexItem>
    <OuiFlexItem
      grow={false}
    >
      <OuiButton
        aria-describedby="generated-id generated-id"
        className="ouiQuickSelect__applyButton"
        disabled={false}
        onClick={[Function]}
        size="s"
      >
        <OuiI18n
          default="Apply"
          token="ouiQuickSelect.applyButton"
        />
      </OuiButton>
    </OuiFlexItem>
  </OuiFlexGroup>
  <OuiHorizontalRule
    margin="s"
  />
  <OuiScreenReaderOnly>
    <p
      id="generated-id"
    >
      <OuiI18n
        default="Currently set to {timeTense} {timeValue} {timeUnit}."
        token="ouiQuickSelect.fullDescription"
        values={
          Object {
            "timeTense": "last",
            "timeUnit": "minutes",
            "timeValue": 15,
          }
        }
      />
    </p>
  </OuiScreenReaderOnly>
</fieldset>
`;

exports[`OuiQuickSelect prevQuickSelect 1`] = `
<fieldset>
  <OuiI18n
    default="Quick select a time range"
    token="ouiQuickSelect.legendText"
  >
    <Component />
  </OuiI18n>
  <OuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="spaceBetween"
    responsive={false}
  >
    <OuiFlexItem
      grow={false}
    >
      <OuiI18n
        default="Quick select"
        token="ouiQuickSelect.quickSelectTitle"
      >
        <Component />
      </OuiI18n>
    </OuiFlexItem>
    <OuiFlexItem
      grow={false}
    >
      <OuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <OuiFlexItem
          grow={false}
        >
          <OuiI18n
            default="Previous time window"
            token="ouiQuickSelect.previousLabel"
          >
            <Component />
          </OuiI18n>
        </OuiFlexItem>
        <OuiFlexItem
          grow={false}
        >
          <OuiI18n
            default="Next time window"
            token="ouiQuickSelect.nextLabel"
          >
            <Component />
          </OuiI18n>
        </OuiFlexItem>
      </OuiFlexGroup>
    </OuiFlexItem>
  </OuiFlexGroup>
  <OuiSpacer
    size="s"
  />
  <OuiFlexGroup
    gutterSize="s"
    responsive={false}
  >
    <OuiFlexItem>
      <OuiI18n
        default="Time tense"
        token="ouiQuickSelect.tenseLabel"
      >
        <Component />
      </OuiI18n>
    </OuiFlexItem>
    <OuiFlexItem>
      <OuiI18n
        default="Time value"
        token="ouiQuickSelect.valueLabel"
      >
        <Component />
      </OuiI18n>
    </OuiFlexItem>
    <OuiFlexItem>
      <OuiI18n
        default="Time unit"
        token="ouiQuickSelect.unitLabel"
      >
        <Component />
      </OuiI18n>
    </OuiFlexItem>
    <OuiFlexItem
      grow={false}
    >
      <OuiButton
        aria-describedby="generated-id generated-id"
        className="ouiQuickSelect__applyButton"
        disabled={false}
        onClick={[Function]}
        size="s"
      >
        <OuiI18n
          default="Apply"
          token="ouiQuickSelect.applyButton"
        />
      </OuiButton>
    </OuiFlexItem>
  </OuiFlexGroup>
  <OuiHorizontalRule
    margin="s"
  />
  <OuiScreenReaderOnly>
    <p
      id="generated-id"
    >
      <OuiI18n
        default="Currently set to {timeTense} {timeValue} {timeUnit}."
        token="ouiQuickSelect.fullDescription"
        values={
          Object {
            "timeTense": "Next",
            "timeUnit": "months",
            "timeValue": 32,
          }
        }
      />
    </p>
  </OuiScreenReaderOnly>
</fieldset>
`;
